--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,12 @@
         </configuration>
       </plugin>
 
+             plugin>
+  <groupId>org.apache.maven.plugins</groupId>
+  <artifactId>maven-war-plugin</artifactId>
+  <version>2.2</version>
+</plugin>
+             
       <plugin>
         <artifactId>maven-site-plugin</artifactId>
         <configuration>
