--- a/pom.xml
+++ b/pom.xml
@@ -51,7 +51,7 @@
         </configuration>
       </plugin>
 
-             plugin>
+             <plugin>
   <groupId>org.apache.maven.plugins</groupId>
   <artifactId>maven-war-plugin</artifactId>
   <version>2.2</version>
